feat: added dark mode and light mode toggle. will have to iron out some ui/ux design flaws but it works for now.

--- a/frontend/ui/src/assets/main.css
+++ b/frontend/ui/src/assets/main.css
@@ -7,7 +7,7 @@
   --font-rubik: "Rubik", sans-serif;
 
   --color-background: var(--main);
-  --color-forground: var(--alt);
+  --color-foreground: var(--alt);
   --color-accent: var(--highlight);
   --color-primary: var(--text);
   --color-disable: var(--muted);
