feat: reworked all the skills cards

--- a/frontend/ui/src/assets/main.css
+++ b/frontend/ui/src/assets/main.css
@@ -85,8 +85,8 @@
 :root {
   --main: #b3cbf9;
   --alt: #c9d8f2;
-  --highlight: #5f9fe7;
-  --highlight-alt: #d4c397;
+  --highlight-alt: #5f9fe7;
+  --highlight: #b89a51;
   --text: #010713;
   --text-alt: #041639;
   --muted: #7b7b7b;
