feat: home and projects page is done, transition effects and other effects can be done later. time to start backend

--- a/frontend/ui/src/assets/main.css
+++ b/frontend/ui/src/assets/main.css
@@ -86,7 +86,7 @@
   --main: #b3cbf9;
   --alt: #c9d8f2;
   --highlight-alt: #5f9fe7;
-  --highlight: #b89a51;
+  --highlight: #977d3e;
   --text: #010713;
   --text-alt: #041639;
   --muted: #7b7b7b;
