--- a/frontend/ui/src/assets/main.css
+++ b/frontend/ui/src/assets/main.css
@@ -3,8 +3,26 @@
 @import 'tailwindcss';
 @tailwind utilities;
 
+@utility box-reflect {
+  -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
+}
+
 @theme {
   --font-rubik: "Rubik", sans-serif;
+
+  --animate-dimlight: dimlight 5s infinite;
+
+  @keyframes dimlight {
+    0%, 18%, 20%, 50.1%, 60%, 65.1%, 80%, 90.1%, 92% {
+      color: #0e3742;
+      box-shadow: none;
+    },
+    18.1%, 20.1%, 30%, 50%, 60.1%, 65%, 80.1%, 90%, 92.1%, 100% {
+      color: #e7f0f6;
+      text-shadow: 0 0 10px #03bcf4;
+    }
+  }
+
 
   --color-background: var(--main);
   --color-foreground: var(--alt);
